# hecs_engine

./: Cargo.toml
common/: Cargo.toml
common/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  runner.rs  spatial.rs  tools.rs  window.rs
game/: Cargo.toml
game/src/: lib.rs
pipelines/: Cargo.toml
pipelines/src/: lib.rs  model_renderer.rs  texture_renderer.rs  ui3d_renderer.rs
pipelines/src/shaders/: model.wgsl  text.wgsl  texture.wgsl
renderer/: Cargo.toml
renderer/src/: camera.rs  lib.rs  shared.rs  text_shared.rs  texture.rs
src/: lib.rs  main.rs
