[package]
name = "engine_template"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "engine", "game", "pipelines", "renderer"]
resolver = "2"

[workspace.dependencies]
glam = "0.29.2"
hecs = { version = "0.10.5", default-features = false }
log = "0.4.22"

[dependencies]
game.path = "game"
