[package]
name = "hecs_engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "engine", "pipelines", "renderer"]
resolver = "2"

[workspace.dependencies]
glam = "0.29.2"
hecs = { version = "0.10.5", default-features = false }
log = "0.4.22"

[dependencies]
common.path = "common"
engine.path = "engine"
pipelines.path = "pipelines"
renderer.path = "renderer"
