[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
common.path = "../common"
glam.workspace = true
hecs.workspace = true
log.workspace = true
renderer.path = "../renderer"
rustc-hash = "2.0.0"
web-time = "1.1.0"
winit = "0.30.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
