[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
glam = { workspace = true, features = ["bytemuck"] }
hecs.workspace = true
image = "0.25.5"
log.workspace = true
pollster = "0.4.0"
wgpu = "23.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
send_wrapper = "0.6.0"
wgpu = { version = "23", features = ["webgl"] }
