[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
common = { version = "0.1.0", path = "../common" }
cosmic-text = "0.12.1"
etagere = "0.2.13"
glam = { workspace = true, features = ["bytemuck"] }
hecs.workspace = true
image = "0.25.5"
log.workspace = true
lru = "0.12.5"
pollster = "0.4.0"
rustc-hash = "2.0.0"
wgpu = "23.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
send_wrapper = "0.6.0"
wgpu = { version = "23", features = ["webgl"] }
